--- a/src/ScrumManager.Console/ScrumManager.Console.csproj
+++ b/src/ScrumManager.Console/ScrumManager.Console.csproj
@@ -7,6 +7,7 @@
   </ItemGroup>
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
